// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MentorStatsCard Should render correctly if is editing mode disabled 1`] = `
<Fragment>
  <MentorStatsModal
    isVisible={false}
    onHide={[Function]}
    stats={
      Object {
        "courseLocationName": "Minsk",
        "courseName": "rs-2020-q1",
      }
    }
  />
  <CommonCard
    content={
      <React.Fragment>
        <div>
          <p>
            Mentored Students:
             
            <Text
              strong={true}
              style={
                Object {
                  "fontSize": 18,
                }
              }
            >
              2
            </Text>
          </p>
          <p>
            Courses as Mentor:
             
            <Text
              strong={true}
              style={
                Object {
                  "fontSize": 18,
                }
              }
            >
              2
            </Text>
          </p>
        </div>
        <List
          dataSource={
            Array [
              Object {
                "courseLocationName": "Minsk",
                "courseName": "rs-2020-q1",
              },
              Object {
                "courseLocationName": "Minsk",
                "courseName": "rs-2018-q1",
                "students": Array [
                  Object {
                    "githubId": "alex",
                    "isExpelled": false,
                    "name": "Alex Petrov",
                    "repoUrl": "https://github.com/rolling-scopes-school/alex-RS2018Q1",
                    "totalScore": 3453,
                  },
                  Object {
                    "githubId": "vasya",
                    "isExpelled": true,
                    "name": "Vasiliy Alexandrov",
                    "repoUrl": "https://github.com/rolling-scopes-school/vasya-RS2018Q1",
                    "totalScore": 120,
                  },
                ],
              },
            ]
          }
          itemLayout="horizontal"
          renderItem={[Function]}
        />
      </React.Fragment>
    }
    icon={<ForwardRef(TeamOutlined) />}
    isEditingModeEnabled={false}
    onPermissionsSettingsChange={[MockFunction]}
    title="Mentor Statistics"
  />
</Fragment>
`;

exports[`MentorStatsCard Should render correctly if is editing mode enabled 1`] = `
<Fragment>
  <MentorStatsModal
    isVisible={false}
    onHide={[Function]}
    stats={
      Object {
        "courseLocationName": "Minsk",
        "courseName": "rs-2020-q1",
      }
    }
  />
  <CommonCard
    content={
      <React.Fragment>
        <div>
          <p>
            Mentored Students:
             
            <Text
              strong={true}
              style={
                Object {
                  "fontSize": 18,
                }
              }
            >
              2
            </Text>
          </p>
          <p>
            Courses as Mentor:
             
            <Text
              strong={true}
              style={
                Object {
                  "fontSize": 18,
                }
              }
            >
              2
            </Text>
          </p>
        </div>
        <List
          dataSource={
            Array [
              Object {
                "courseLocationName": "Minsk",
                "courseName": "rs-2020-q1",
              },
              Object {
                "courseLocationName": "Minsk",
                "courseName": "rs-2018-q1",
                "students": Array [
                  Object {
                    "githubId": "alex",
                    "isExpelled": false,
                    "name": "Alex Petrov",
                    "repoUrl": "https://github.com/rolling-scopes-school/alex-RS2018Q1",
                    "totalScore": 3453,
                  },
                  Object {
                    "githubId": "vasya",
                    "isExpelled": true,
                    "name": "Vasiliy Alexandrov",
                    "repoUrl": "https://github.com/rolling-scopes-school/vasya-RS2018Q1",
                    "totalScore": 120,
                  },
                ],
              },
            ]
          }
          itemLayout="horizontal"
          renderItem={[Function]}
        />
      </React.Fragment>
    }
    icon={<ForwardRef(TeamOutlined) />}
    isEditingModeEnabled={true}
    onPermissionsSettingsChange={[MockFunction]}
    title="Mentor Statistics"
  />
</Fragment>
`;
